<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FocFirstYearSemActivity">

    <RelativeLayout
        android:id="@+id/rl_3"
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="343dp"
            android:layout_height="110dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/sliit" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_2"
        android:layout_width="match_parent"
        android:layout_height="379dp"
        app:layout_constraintEnd_toEndOf="@+id/rl_1"
        app:layout_constraintTop_toBottomOf="@+id/rl_1">


        <Button
            android:id="@+id/ooc"
            android:layout_width="215dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="96dp"
            android:background="@drawable/ic_foc"
            android:onClick="onClickFFSem1"
            android:text="@string/btn_itSem1"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSem2"
            android:layout_width="216dp"
            android:layout_height="76dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="99dp"
            android:background="@drawable/ic_foc"
            android:onClick="onClickFFSem2"
            android:text="@string/btn_itSem2"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_facCompY1"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textIsSelectable="false"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>