<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FobYearActivity">

    <RelativeLayout
        android:id="@+id/rl_3"
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="343dp"
            android:layout_height="110dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/sliit" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_2"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        app:layout_constraintEnd_toEndOf="@+id/rl_1"
        app:layout_constraintTop_toBottomOf="@+id/rl_1">


        <TextView
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:fontFamily="serif-monospace"
            android:text="@string/title_activity_fob_year"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        tools:ignore="InvalidId">

        <Button
            android:id="@+id/btnfobYear1"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="74dp"
            android:background="@drawable/circle_btn2"
            android:onClick="onClickY1"
            android:text="@string/title_activity_faculty_year1"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnfobYear2"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="65dp"
            android:background="@drawable/circle_btn2"
            android:text="@string/title_activity_faculty_year2"
            android:textColor="#ffff" />

    </RelativeLayout>


</LinearLayout>