<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fob_FirstYearActivity">

    <RelativeLayout
        android:id="@+id/rl_3"
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="343dp"
            android:layout_height="110dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            app:srcCompat="@drawable/sliit" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/pwd">

        <TextView
            android:id="@+id/textView"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:fontFamily="serif-monospace"
            android:text="@string/txt_facBis"
            android:textAllCaps="true"
            android:textColor="#252d67"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_2"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        app:layout_constraintEnd_toEndOf="@+id/rl_1"
        app:layout_constraintTop_toBottomOf="@+id/rl_1">


        <TextView
            android:id="@+id/s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif-monospace"
            android:text="@string/txt_year1"
            android:textAllCaps="true"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnBMY2Sem1"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:background="@drawable/ic_foc"
            android:fontFamily="monospace"
            android:text="@string/btn_itSem1"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnBMY2Sem2"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="52dp"
            android:background="@drawable/ic_foc"
            android:fontFamily="monospace"
            android:text="@string/btn_itSem2"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>