<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FocSecondYearSemesterOne">

    <RelativeLayout
        android:id="@+id/rl_3"
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="343dp"
            android:layout_height="110dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            app:srcCompat="@drawable/sliit" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                app:layout_constraintTop_toBottomOf="@+id/pwd">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="14dp"
                    android:fontFamily="serif-monospace"
                    android:text="@string/txt_facComp"
                    android:textAllCaps="true"
                    android:textColor="#252d67"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_2"
                android:layout_width="match_parent"
                android:layout_height="448dp"
                app:layout_constraintEnd_toEndOf="@+id/rl_1"
                app:layout_constraintTop_toBottomOf="@+id/rl_1">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:fontFamily="serif-monospace"
                    android:text="@string/txt_secYearSem1"
                    android:textAllCaps="true"
                    android:textColor="#252d67"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/se"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="46dp"
                    android:background="@drawable/ic_foc"
                    android:fontFamily="monospace"
                    android:onClick="clickse"
                    android:text="@string/se"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/oopTute"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="120dp"
                    android:background="@drawable/ic_foc"
                    android:fontFamily="monospace"
                    android:onClick="clickdbms"
                    android:text="@string/dbms"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/ossa"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_foc"
                    android:fontFamily="monospace"
                    android:onClick="clickossa"
                    android:text="@string/ossa"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/oop"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="116dp"
                    android:background="@drawable/ic_foc"
                    android:fontFamily="monospace"
                    android:onClick="clickoop"
                    android:text="@string/oop"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>