<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FocSecondyearSemesteroneOop">

    <RelativeLayout
        android:id="@+id/rl_3"
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="343dp"
            android:layout_height="110dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            app:srcCompat="@drawable/sliit" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_2"
        android:layout_width="match_parent"
        android:layout_height="317dp"
        app:layout_constraintEnd_toEndOf="@+id/rl_1"
        app:layout_constraintTop_toBottomOf="@+id/rl_1">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:fontFamily="sans-serif"
            android:text="@string/oop"
            android:textColor="#252d67"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/oopTute"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            android:background="@drawable/ic_foc"
            android:fontFamily="monospace"
            android:text="@string/tutes"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/oopPp"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/ic_foc"
            android:fontFamily="monospace"
            android:text="@string/ppap"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>