<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FocYearActivity">

    <RelativeLayout
        android:id="@+id/rl_3"
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="343dp"
            android:layout_height="110dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            app:srcCompat="@drawable/sliit" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_2"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        app:layout_constraintEnd_toEndOf="@+id/rl_1"
        app:layout_constraintTop_toBottomOf="@+id/rl_1">


        <TextView
            android:id="@+id/fac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:fontFamily="serif-monospace"
            android:text="@string/title_activity_year"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/black"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="258dp">

        <Button
            android:id="@+id/btnfocsecyear"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="65dp"
            android:background="@drawable/circle_btn2"
            android:onClick="onClickSyear"
            android:text="@string/title_activity_faculty_year2"
            android:textColor="#ffff" />

        <Button
            android:id="@+id/btnfocfirstYear"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="78dp"
            android:background="@drawable/circle_btn2"
            android:onClick="onClickFyear"
            android:text="@string/title_activity_faculty_year1"
            android:textColor="#ffffff" />
    </RelativeLayout>

</LinearLayout>